--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -10,16 +10,15 @@
     <link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
     <title>El Apache!</title>
     <!-- Jquery link here -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
-        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"
+        integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
     <!-- Link to custom js file to handle user view logic -->
     <script src="/assets/js/tacos.js"></script>
 </head>
 
 <body>
     <div class="container">
-
+        <br>
         {{{ body }}}
 
     </div>
