--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,27 +1,29 @@
-li {
-  padding: 5px;
-  margin: 5px;
-  background: #faebd7;
-}
-
 .label {
   font-weight: bold;
-}
-
-.create-update-form {
-  padding: 5px;
-  margin: 5px;
-  background: aqua;
 }
 
 .form-group {
   margin-bottom: 5px;
 }
 
-#taqueria {
+#taqueria, .tacoHeader {
   text-align: center;
 }
 
 .change-devoured {
   float: right;
+  padding: 3px;
 }
+
+/* .tacoRow {
+  background-color: skyblue;
+} */
+
+.tacosDevoured {
+  list-style: none;
+}
+
+/* .list-group-item {
+  display: list-item;
+  list-style-type: disc;
+} */
