--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,10 +17,15 @@
 </head>
 
 <body>
-    <div class="container">
+    <div class="backGround">
         <br>
-        {{{ body }}}
-
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-1 cartaNumero">38</div>
+            </div>
+            <br>
+            {{{ body }}}
+        </div>
     </div>
     <!-- Bootstrap required JS plugins -->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
