added a logo for taqueria, googlefonts added as well, added img assets directory, background for app

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <br>
 <div class="row">
     <div class="col-sm-12">
-        <h1 id="taqueria">Taqueria El Apache</h1>
+        <h1 id="taqueria">Taqueria El Apache<img src="/assets/img/elApache.png" id="elApache"></h1>
     </div>
 </div>
 <br>
