--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,6 +8,9 @@
 
 #taqueria, .tacoHeader {
   text-align: center;
+  /* font-family: 'Roboto', sans-serif; */
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
 }
 
 .change-devoured {
@@ -34,4 +37,16 @@
   font-size: 20px;
   margin-top: 5px;
   font-weight: bold;
+}
+
+#elApache {
+  height: 90px;
+  width: 90px;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  background-image: url("/assets/img/cookingBoard.jpg");
+  background-repeat: no-repeat;
+  background-attachment: scroll;
 }
